sample/asm/invalid_operand_types/imul.asm
.function: main/1
    fstore 1 1.0
    strstore 2 "Hello World!"
    imul 3 1 2

    izero 0
    return
.end
